--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,11 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "log4js": "^6.9.1",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "sequelize-cli": "^6.6.3"
   }
 }
