Add Docker & Kubernetes setup, fix profile updates, add tax rates, and improve UI
- Dockerized all services (Backend, Frontend, Agent Service)
- Created Kubernetes manifests with deployments, services, and ingress
- Added docker-compose.yml for local development
- Fixed profile picture upload and display
- Added tax rate feature for property owners
- Fixed date validation to allow today as check-in date
- Added price display in booking requests and history
- Improved landing page design
- Fixed database connection configuration for containerized environments
- Added horizontal pod autoscalers for auto-scaling

--- a/agent-service/requirements.txt
+++ b/agent-service/requirements.txt
@@ -5,6 +5,7 @@ python-multipart==0.0.6
 
 # AI & LLM - Direct OpenAI integration
 openai>=1.10.0
+groq>=0.36.0
 
 # Web Search
 tavily-python==0.3.3
