Fix profile updates, signup, and profile picture display
- Fixed database password configuration for signup
- Added kafkajs dependency and made Kafka optional for local development
- Improved profile update error handling with specific error messages
- Fixed profile picture URL construction and display
- Added better logging for debugging profile issues
- Fixed session persistence after signup
- Improved empty string handling in profile updates
- Enhanced error messages in frontend for better user feedback

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -7,6 +7,8 @@ resources:
   - namespace.yaml
   - configmap.yaml
   - secrets.yaml
+  - zookeeper-deployment.yaml
+  - kafka-deployment.yaml
   - mysql-deployment.yaml
   - backend-deployment.yaml
   - agent-deployment.yaml
