--- a/k8s/mongodb-deployment.yaml
+++ b/k8s/mongodb-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pvc
+  name: mongodb-pvc
   namespace: hostly
 spec:
   accessModes:
@@ -14,87 +14,90 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql
+  name: mongodb
   namespace: hostly
   labels:
-    app: mysql
+    app: mongodb
     service: database
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: mysql
+      app: mongodb
   template:
     metadata:
       labels:
-        app: mysql
+        app: mongodb
     spec:
       containers:
-      - name: mysql
-        image: mysql:8.0
+      - name: mongodb
+        image: mongo:7.0
         ports:
-        - containerPort: 3306
-          name: mysql
+        - containerPort: 27017
+          name: mongodb
         env:
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: hostly-secrets
-              key: DB_PASSWORD
-        - name: MYSQL_DATABASE
+        - name: MONGO_INITDB_DATABASE
           valueFrom:
             configMapKeyRef:
               name: hostly-config
-              key: DB_NAME
+              key: MONGODB_DB
+        - name: MONGO_INITDB_ROOT_USERNAME
+          valueFrom:
+            configMapKeyRef:
+              name: hostly-config
+              key: MONGODB_USER
+        - name: MONGO_INITDB_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: hostly-secrets
+              key: MONGODB_PASSWORD
         volumeMounts:
-        - name: mysql-storage
-          mountPath: /var/lib/mysql
+        - name: mongodb-storage
+          mountPath: /data/db
         resources:
           requests:
             memory: "512Mi"
             cpu: "250m"
           limits:
-            memory: "1Gi"
-            cpu: "500m"
+            memory: "2Gi"
+            cpu: "1000m"
         livenessProbe:
           exec:
             command:
-            - mysqladmin
-            - ping
-            - -h
-            - localhost
+            - mongosh
+            - --eval
+            - db.adminCommand('ping')
           initialDelaySeconds: 30
           periodSeconds: 10
           timeoutSeconds: 5
         readinessProbe:
           exec:
             command:
-            - mysqladmin
-            - ping
-            - -h
-            - localhost
+            - mongosh
+            - --eval
+            - db.adminCommand('ping')
           initialDelaySeconds: 10
           periodSeconds: 5
           timeoutSeconds: 3
       volumes:
-      - name: mysql-storage
+      - name: mongodb-storage
         persistentVolumeClaim:
-          claimName: mysql-pvc
+          claimName: mongodb-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: mongodb
   namespace: hostly
   labels:
-    app: mysql
+    app: mongodb
 spec:
   type: ClusterIP
   ports:
-  - port: 3306
-    targetPort: 3306
+  - port: 27017
+    targetPort: 27017
     protocol: TCP
-    name: mysql
+    name: mongodb
   selector:
-    app: mysql
+    app: mongodb
 
