--- a/backend/package.json
+++ b/backend/package.json
@@ -11,19 +11,17 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
-    "connect-session-sequelize": "^8.0.2",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.2",
     "groq-sdk": "^0.34.0",
     "kafkajs": "^2.2.4",
     "log4js": "^6.9.1",
+    "mongoose": "^8.0.0",
     "multer": "^2.0.2",
-    "mysql2": "^3.15.3",
-    "openai": "^4.28.0",
-    "sequelize": "^6.37.7"
+    "openai": "^4.28.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
