--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,45 @@
-version: '3.8'
-
 services:
-  # MySQL Database
-  mysql:
-    image: mysql:8.0
-    container_name: hostly-mysql
+  # MongoDB Database
+  mongodb:
+    image: mongo:7.0
+    container_name: hostly-mongodb
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-}
-      MYSQL_DATABASE: ${DB_NAME:-hostly}
-      MYSQL_USER: ${DB_USER:-root}
-      MYSQL_PASSWORD: ${DB_PASSWORD:-}
+      MONGO_INITDB_DATABASE: ${MONGODB_DB:-hostly}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USER:-root}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_PASSWORD:-rootpassword}
     ports:
-      - "3306:3306"
+      - "27017:27017"
     volumes:
-      - mysql_data:/var/lib/mysql
-      - ./mysql-init:/docker-entrypoint-initdb.d
+      - mongodb_data:/data/db
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
       interval: 10s
       timeout: 5s
       retries: 5
     networks:
       - hostly-network
+    restart: unless-stopped
+
+  # MongoDB Web UI (mongo-express)
+  mongo-express:
+    image: mongo-express:latest
+    container_name: hostly-mongo-express
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGODB_USER:-root}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGODB_PASSWORD:-rootpassword}
+      ME_CONFIG_MONGODB_SERVER: mongodb
+      ME_CONFIG_MONGODB_PORT: 27017
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: admin
+      ME_CONFIG_MONGODB_ENABLE_ADMIN: "true"
+    ports:
+      - "8081:8081"
+    depends_on:
+      mongodb:
+        condition: service_healthy
+    networks:
+      - hostly-network
+    restart: unless-stopped
 
   # Backend Service
   backend:
@@ -31,21 +49,26 @@ services:
     container_name: hostly-backend
     environment:
       NODE_ENV: production
-      DB_HOST: mysql
-      DB_USER: ${DB_USER:-root}
-      DB_PASSWORD: ${DB_PASSWORD:-}
-      DB_NAME: ${DB_NAME:-hostly}
+      MONGODB_HOST: mongodb
+      MONGODB_PORT: 27017
+      MONGODB_DB: ${MONGODB_DB:-hostly}
+      MONGODB_USER: ${MONGODB_USER:-root}
+      MONGODB_PASSWORD: ${MONGODB_PASSWORD:-rootpassword}
+      MONGODB_URI: mongodb://${MONGODB_USER:-root}:${MONGODB_PASSWORD:-rootpassword}@mongodb:27017/${MONGODB_DB:-hostly}?authSource=admin
       PORT: 3000
       SESSION_SECRET: ${SESSION_SECRET:-your-super-secret-session-key-here}
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
       CORS_ORIGIN: http://localhost:5173
+      KAFKA_BROKER: kafka:9092
     ports:
       - "3000:3000"
     volumes:
       - ./backend/uploads:/app/uploads
       - ./backend/logs:/app/logs
     depends_on:
-      mysql:
+      mongodb:
+        condition: service_healthy
+      kafka:
         condition: service_healthy
     networks:
       - hostly-network
@@ -58,11 +81,12 @@ services:
       dockerfile: Dockerfile
     container_name: hostly-agent
     environment:
-      DB_HOST: mysql
-      DB_USER: ${DB_USER:-root}
-      DB_PASSWORD: ${DB_PASSWORD:-}
-      DB_NAME: ${DB_NAME:-hostly}
-      DB_PORT: 3306
+      MONGODB_HOST: mongodb
+      MONGODB_PORT: 27017
+      MONGODB_DB: ${MONGODB_DB:-hostly}
+      MONGODB_USER: ${MONGODB_USER:-root}
+      MONGODB_PASSWORD: ${MONGODB_PASSWORD:-rootpassword}
+      MONGODB_URI: mongodb://${MONGODB_USER:-root}:${MONGODB_PASSWORD:-rootpassword}@mongodb:27017/${MONGODB_DB:-hostly}?authSource=admin
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
       TAVILY_API_KEY: ${TAVILY_API_KEY:-}
       HOST: 0.0.0.0
@@ -72,7 +96,7 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      mysql:
+      mongodb:
         condition: service_healthy
       backend:
         condition: service_started
@@ -96,8 +120,63 @@ services:
       - hostly-network
     restart: unless-stopped
 
+  # Zookeeper Service (Required for Kafka)
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.5.0
+    container_name: hostly-zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+      # Reduce log verbosity for connection/disconnection messages
+      ZOOKEEPER_LOG4J_ROOT_LOGLEVEL: WARN
+      # Connection timeout settings
+      ZOOKEEPER_INIT_LIMIT: 10
+      ZOOKEEPER_SYNC_LIMIT: 5
+      # Max client connections
+      ZOOKEEPER_MAX_CLIENT_CNXNS: 60
+    ports:
+      - "2181:2181"
+    networks:
+      - hostly-network
+    restart: unless-stopped
+    healthcheck:
+      # Simple TCP check - just verify port is open
+      test: ["CMD-SHELL", "nc -z localhost 2181 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  # Kafka Service
+  kafka:
+    image: confluentinc/cp-kafka:7.5.0
+    container_name: hostly-kafka
+    depends_on:
+      zookeeper:
+        condition: service_healthy
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_NUM_PARTITIONS: 3
+    ports:
+      - "9092:9092"
+    networks:
+      - hostly-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
-  mysql_data:
+  mongodb_data:
     driver: local
 
 networks:
