--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.2.6",
         "axios": "^1.7.7",
         "framer-motion": "^11.0.24",
         "lucide-react": "^0.469.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-redux": "^9.1.2",
         "react-router-dom": "^6.26.2"
     },
     "devDependencies": {
