--- a/k8s/zookeeper-deployment.yaml
+++ b/k8s/zookeeper-deployment.yaml
@@ -26,6 +26,14 @@ spec:
           value: "2181"
         - name: ZOOKEEPER_TICK_TIME
           value: "2000"
+        - name: ZOOKEEPER_LOG4J_ROOT_LOGLEVEL
+          value: "WARN"
+        - name: ZOOKEEPER_INIT_LIMIT
+          value: "10"
+        - name: ZOOKEEPER_SYNC_LIMIT
+          value: "5"
+        - name: ZOOKEEPER_MAX_CLIENT_CNXNS
+          value: "60"
         resources:
           requests:
             memory: "256Mi"
