--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,9 +109,9 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - VITE_API_BASE_URL=${VITE_API_BASE_URL:-http://localhost:3000/api}
     container_name: hostly-frontend
-    environment:
-      VITE_API_BASE_URL: http://localhost:3000/api
     ports:
       - "5173:80"
     depends_on:
