--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       PORT: 3000
       SESSION_SECRET: ${SESSION_SECRET:-your-super-secret-session-key-here}
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
-      CORS_ORIGIN: http://localhost:5173
+      CORS_ORIGIN: ${CORS_ORIGIN:-http://localhost:5173}
       KAFKA_BROKER: kafka:9092
     ports:
       - "3000:3000"
